fixed difficult alignment

--- a/res/styles/index.css
+++ b/res/styles/index.css
@@ -69,6 +69,9 @@
 	border-style: solid;
 	border-color: blue;
 }
+.difficultyHolder {
+	text-align:center;
+}
 .originDivider {
 	text-align: center;
 	padding: 15px;
